# gitraven

./: .gitignore  CMakeLists.txt  README.md  com.github.shanmukhateja.gitraven.desktop  gitmanager.cpp  gitmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  raveneditor.cpp  raveneditor.h  ravenfile.cpp  ravenfile.h  ravengitcheckoutdialog.cpp  ravengitcheckoutdialog.h  ravengitstatusthread.cpp  ravengitstatusthread.h  ravenlhsview.cpp  ravenlhsview.h  ravenmonaco.cpp  ravenmonaco.h  ravenmonacobridge.cpp  ravenmonacobridge.h  ravenmonacohttpserver.cpp  ravenmonacohttpserver.h  ravenmonacopage.cpp  ravenmonacopage.h  ravenrhsview.cpp  ravenrhsview.h  ravenstatusbar.cpp  ravenstatusbar.h  ravenstatusmessagedispatcher.cpp  ravenstatusmessagedispatcher.h  raventree.cpp  raventree.h  raventreedelegate.cpp  raventreedelegate.h  raventreeitem.cpp  raventreeitem.h  raventreemodel.cpp  (+2 more)
editor/: index.html  package-lock.json
